# libsdpi

./: CMakeLists.txt  README.md  libdpi_info.txt
include/: sdpi_app_classify.h  sdpi_core_manager.h  sdpi_flow_manager.h  sdpi_flow_parser.h  sdpi_flow_struct.h  sdpi_host_config.h  sdpi_host_inspector.h  sdpi_host_struct.h  sdpi_httpx_struct.h  sdpi_ip_config.h  sdpi_ip_inspector.h  sdpi_ip_struct.h  sdpi_port_config.h  sdpi_port_inspector.h  sdpi_port_struct.h
src/: sdpi_core_manager.c  sdpi_flow_manager.c  sdpi_flow_parser.c  sdpi_flow_struct.c  sdpi_host_inspector.c  sdpi_host_struct.c  sdpi_httpx_struct.c  sdpi_ip_inspector.c  sdpi_ip_struct.c  sdpi_port_inspector.c  sdpi_port_struct.c
