CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(libsdpi)

MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")

#add include files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#add src files
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_SRCS)

#compile static lib
ADD_LIBRARY(libsdpi ${DIR_SRCS})

SET_TARGET_PROPERTIES(libsdpi PROPERTIES LINKER_LANGUAGE C)

SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/build)